--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
   --primary-colour: #FFFAEC;
   --primary-oposite-colour: #575B8A;
   --primary-orange: rgb(165, 62, 21);
+  box-sizing: border-box;
 }
 
 html {
@@ -82,9 +83,14 @@ section {
   transform: translateX(15px);
 }
 
+.nav-link {
+  display: block;
+  width: 100%;
+}
+
 /* ABOUT SECTION */
 
-.about-header {
+.header {
   width: 50%;
   position: absolute;
   margin-top: 15%;
@@ -189,4 +195,65 @@ section {
   width: 700px;
   color: var(--primary-orange);
   text-align: right;
+}
+
+/* Education / Skills */ 
+
+#education .container,
+#skills .container {
+  margin-top: 15%;
+}
+
+#skills h1 {
+  margin-bottom: 20px;
+}
+
+#skills h3 {
+  margin-bottom: 40px;
+}
+
+.tools {
+  display: flex;
+  margin-bottom: 60px;
+}
+
+.tool {
+  position: relative;
+  text-align: center;
+  width: 65px;
+  height: 65px;
+  margin-right: 20px;
+}
+
+.tool-icon {
+  width: 100%;
+  height: 100%;
+  margin-bottom: 10px;
+  transition: all .3s ease-out;
+}
+
+.tool p {
+  opacity: 0;
+  position: absolute;
+  transition: all .3s ease-out;
+}
+
+.tool:hover > .tool-icon {
+  transform: scale(1.1);
+}
+
+.tool:hover > p {
+  opacity: 1;
+}
+
+.workflow > li {
+  background: url("img/icons/check.svg") no-repeat;
+  background-position: 0 50%;
+  background-size: 30px;
+  padding: 0 40px;
+  margin-bottom: 8px;
+}
+
+.workflow > li:last-item {
+  margin-bottom: 0;
 }
