dropdown button style

--- a/media.css
+++ b/media.css
@@ -1,6 +1,44 @@
 @media (max-width: 1120px) {
   .navbar {
-    display: none;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    max-height: 120px;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1em 50px;
+  }
+  
+  .portrait {
+    width: 80px;
+    height: auto;
+    margin: 0;
+  }
+
+  .list-item {
+    display: inline-block;
+    line-height: 1;
+    padding: 0 10px;
+    background: transparent;
+    border: none;
+    margin-bottom: 0;
+    border-radius: 0;
+    font-weight: bold;
+  }
+
+  .list-item:nth-child(even) {
+    right: inherit;
+  }
+
+  .list-item:hover {
+    transform: none;
+  }
+
+  .nav-link:active {
+    transform: scale(1.05);
+    color: var(--primary-orange);
   }
 
   section {
