--- a/media.css
+++ b/media.css
@@ -8,7 +8,7 @@
     flex-flow: row nowrap;
     justify-content: space-between;
     align-items: center;
-    padding: 1em 50px;
+    padding: 1em;
   }
   
   .portrait {
@@ -25,7 +25,7 @@
     border: none;
     margin-bottom: 0;
     border-radius: 0;
-    font-weight: bold;
+    font-size: 1em;
   }
 
   .list-item:nth-child(even) {
@@ -62,29 +62,29 @@
   }
 }
 
-@media (max-width: 812px) {
-  .menu-button {
-    display: block;
-    position: absolute;
-    right: 40px;
+@media (max-width: 770px) {
+
+  .header {
+    padding: 3em;
+  }
+  .about-heading {
+    font-size: 3em;
   }
 
-  .nav-list {
-    position: absolute;
-    right: 0px;
-    top: 100px;
-    background: var(--primary-oposite-colour);
-    padding: 10px;
-    text-align: center;
+  .section {
+    padding: 9em 50px 0 50px;
   }
+}
 
-  .list-item {
-    display: block;
+@media(max-width: 375px) {
+
+  
+  .about-heading {
+    font-size: 2.2em;
     margin-bottom: 10px;
-    font-weight: normal;
   }
 
-  .list-item:nth-child(even) {
-    right: 0;
+  .about-sub {
+    line-height: 1.5;
   }
 }
