--- a/media.css
+++ b/media.css
@@ -90,6 +90,10 @@
     border: 2px solid var(--primary-colour);
   }
 
+  .menu-button {
+    display: block;
+  }
+
   .nav-list {
     flex-flow: column nowrap;
     background: var(--primary-oposite-colour);
@@ -109,7 +113,6 @@
     line-height: 2;
     right: inherit;
     font-size: .9em;
-    /* transition: none; */
   }
 
   .header {
@@ -128,6 +131,17 @@
 
   .social-item {
     width: 3em;
+    height: 3em;
+  }
+
+  .social-item > a {
+    top: 3em;
+  }
+
+  .social-item:hover > a {
+    position: absolute;
+    width: 3em;
+    top: 0;
   }
 
   .section {
