--- a/style.css
+++ b/style.css
@@ -60,6 +60,7 @@ section {
 
 .portrait:hover > img {
   transform: scale(1.1);
+  touch-action: none;
 }
 
 .menu-button {
@@ -75,6 +76,7 @@ section {
   top: 20px;
   right: 20px;
   transition: all .3s ease;
+  display: none;
 }
 
 .line {
