modified colour palette

--- a/media.css
+++ b/media.css
@@ -1,3 +1,5 @@
+/* Big Screens */
+
 @media (max-width: 1120px) {
 
   .navbar {
@@ -63,6 +65,8 @@
   }
 }
 
+/* Medium Screens */
+
 @media (max-width: 770px) {
 
   .header {
@@ -77,6 +81,9 @@
     padding: 9em 50px 0 50px;
   }
 }
+
+
+/* Small Screens */
 
 @media (max-width: 375px) {
 
@@ -104,6 +111,7 @@
     border-bottom-left-radius: 5px;
     position: absolute;
     top: 0;
+    right: 0;
     right: -140px;
     display: flex;
     align-items: center;
@@ -113,11 +121,11 @@
 
   .list-item {
     display: block;
-    padding: .1em 1em;
+    padding: 0 1em;
     width: 100%;
     line-height: 2;
     right: inherit;
-    font-size: .9em;
+    font-size: .8em;
     border-bottom: 1px solid #fff;
     transition: none;
   }
