--- a/style.css
+++ b/style.css
@@ -3,9 +3,9 @@
 
 
 :root {
-  --primary-colour: #FFFAEC;
-  --primary-oposite-colour: #575B8A;
-  --primary-orange: rgb(165, 62, 21);
+  --primary-colour: rgb(255, 254, 253);
+  --primary-oposite-colour: #3E7CB3;
+  --primary-orange: rgb(231, 89, 45);
   -webkit-box-sizing: border-box;
      -moz-box-sizing: border-box;
        box-sizing: border-box;
@@ -18,6 +18,7 @@ html {
 
 body {
   font-family: 'Muli', sans-serif;
+  background: var(--primary-colour);
 }
 
 section {
@@ -66,7 +67,7 @@ section {
 .menu-button {
   padding: 8px 10px;
   border: 2px solid var(--primary-oposite-colour);
-  background: #fff;
+  background: transparent;
   border-radius: 5px;
   display: flex;
   flex-flow: column nowrap;
